<resources>
  <string name="app_name">Pole Star</string>
  <string name="add_config">Add Configuration</string>
  <string name="disable_all_heads_up_notifications">Disable all Heads-up Notifications</string>
  <string name="app_selection">App Selection</string>
  <string name="select_apps">Select Apps</string>
  <string name="selected_apps">Selected Apps</string>
  <string name="configuration_name">Configuration Name</string>
  <string name="service_name">notification service</string>
</resources>
