<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
  <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      >
    <include layout="@layout/config_toolbar"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:layout_marginLeft="@dimen/activity_default_margin_left"
        android:layout_marginRight="@dimen/activity_default_margin_right"
        android:orientation="vertical"
        >
      <EditText
          android:id="@id/config_name"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/configuration_name"
          android:minHeight="48dp"
          android:textColor="@android:color/black"
          android:textColorHint="@color/colorTextPrimary"
          />
      <CheckBox
          android:id="@id/disable_notify"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:buttonTint="@color/colorTextPrimary"
          android:checked="false"
          android:text="@string/disable_all_heads_up_notifications"
          android:textColor="@color/colorTextPrimary"
          />
      <include layout="@layout/divider"/>

      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:padding="4dp"
          android:text="@string/app_selection"
          android:textColor="@color/colorPrimary"
          />
      <RadioGroup
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginLeft="@dimen/activity_default_margin_left"
          >
        <RadioButton
            android:id="@id/filter_notify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Filter Notification from the selected apps"
            style="@style/CheckBoxStyle"
            />
        <RadioButton
            android:id="@id/filter_all_notify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Filter Notification from all apps except selected apps"
            style="@style/CheckBoxStyle"
            />
      </RadioGroup>
      <include layout="@layout/divider"/>

      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:padding="4dp"
          android:text="@string/app_selection"
          android:textColor="@color/colorPrimary"
          />

      <RadioGroup
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginLeft="@dimen/activity_default_margin_left"
          >
        <RadioButton
            android:id="@id/dismiss_notify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Dismiss Notification"
            style="@style/CheckBoxStyle"
            />
        <RadioButton
            android:id="@id/mute_notify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Mute Notification"
            style="@style/CheckBoxStyle"
            />

        <RadioButton
            android:id="@id/hide_notify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Hide Notification"
            style="@style/CheckBoxStyle"
            />

      </RadioGroup>
      <include layout="@layout/divider"/>
      <RelativeLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          >
        <TextView
            android:id="@id/select_apps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@drawable/select_apps_bg"
            android:layout_margin="16dp"
            android:gravity="center"
            android:paddingBottom="8dp"
            android:paddingLeft="32dp"
            android:paddingRight="32dp"
            android:paddingTop="8dp"
            android:text="@string/select_apps"
            android:textColor="#ffffff"
            android:visibility="visible"
            />
        <LinearLayout
            android:id="@id/app_list"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            >
          <TextView
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:padding="4dp"
              android:text="@string/selected_apps"
              android:textColor="@color/colorPrimary"
              />
          <android.support.v7.widget.RecyclerView
              android:id="@id/app_list_recycler"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:visibility="gone"
              />

        </LinearLayout>
      </RelativeLayout>
    </LinearLayout>

  </RelativeLayout>
</ScrollView>
